// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WorkersTab should render 1`] = `
<div>
  <div
    class="makeStyles-filterActionsContainer-255"
  >
    <div
      class="makeStyles-filterActionsContainer-255"
    >
      <div
        class="MuiBox-root MuiBox-root-310 makeStyles-filterStatusContainer-258 makeStyles-autocompleteFilterStatus-275 makeStyles-firstFilter-242"
      >
        <div
          class="makeStyles-floatingFilterWrapper-264 makeStyles-filterWrapper-263 makeStyles-buttonContainer-312 floatingFilterWrapper"
        >
          <span
            class="makeStyles-floatingFilterButton-265"
            data-testid="controlled-button"
            tabindex="-1"
          >
            <button
              aria-controls="false"
              aria-haspopup="true"
              class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-buttonFilter-273"
              data-testid="button-filter-open"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                All Locations
                <span
                  class="MuiButton-endIcon MuiButton-iconSizeMedium"
                >
                  <svg
                    class="makeStyles-dropdownIcon-267"
                  >
                    expand.svg
                  </svg>
                </span>
              </span>
            </button>
          </span>
        </div>
      </div>
      <div
        class="MuiBox-root MuiBox-root-316 makeStyles-filterStatusContainer-258 makeStyles-autocompleteFilterStatus-275"
      >
        <div
          class="makeStyles-floatingFilterWrapper-264 makeStyles-filterWrapper-263 makeStyles-buttonContainer-312 floatingFilterWrapper"
        >
          <span
            class="makeStyles-floatingFilterButton-265"
            data-testid="controlled-button"
            tabindex="-1"
          >
            <button
              aria-controls="false"
              aria-haspopup="true"
              class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-buttonFilter-273"
              data-testid="button-filter-open"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                All Projects Assigned
                <span
                  class="MuiButton-endIcon MuiButton-iconSizeMedium"
                >
                  <svg
                    class="makeStyles-dropdownIcon-267"
                  >
                    expand.svg
                  </svg>
                </span>
              </span>
            </button>
          </span>
        </div>
      </div>
    </div>
    <a
      href="/workers/wizard/new"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-createButton-285 makeStyles-primaryButtonLarge-287 MuiButton-containedPrimary MuiButton-containedSizeLarge MuiButton-sizeLarge MuiButton-fullWidth"
        tabindex="0"
        type="submit"
      >
        <span
          class="MuiButton-label"
        >
          Create Worker
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </a>
  </div>
  <table
    aria-label="worker-list"
    class="MuiTable-root"
  >
    <thead
      class="MuiTableHead-root"
    >
      <tr
        class="MuiTableRow-root MuiTableRow-head"
      >
        <th
          class="MuiTableCell-root MuiTableCell-head"
          scope="col"
        >
          Name
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head"
          scope="col"
        >
          Location
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head"
          scope="col"
        >
          Trades
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head"
          scope="col"
        >
          Projects Assigned
        </th>
      </tr>
    </thead>
    <tbody
      class="MuiTableBody-root"
    >
      <tr
        class="MuiTableRow-root WithStyles(ForwardRef(TableRow))-root-357 makeStyles-clickableRow-355"
        data-testid="worker-client-list-row"
      >
        <td
          class="MuiTableCell-root MuiTableCell-body makeStyles-cellAvatar-270"
        >
          <div
            class="makeStyles-userCenter-235"
          >
            <span
              class="MuiBadge-root makeStyles-avatarPosition-237 makeStyles-avatarWithSmallBadge-320"
            >
              <div
                class="MuiAvatar-root MuiAvatar-circle makeStyles-avatarWrapper-318 makeStyles-avatarMedium-321 MuiAvatar-colorDefault"
              >
                <svg
                  class="MuiSvgIcon-root"
                  focusable="false"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
                  />
                  <title>
                    Active
                  </title>
                </svg>
              </div>
              <span
                class="MuiBadge-badge MuiBadge-anchorOriginBottomRightCircle"
              >
                <svg>
                  accepted.svg
                </svg>
              </span>
            </span>
            <a
              class="Link-root-358"
              data-testid="worker-row-btn"
              href="/workers/detail/2"
              title="View Worker detail"
            >
              John Doe
            </a>
          </div>
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          Dallas
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          Ceiling, Plumbing
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          1
        </td>
      </tr>
      <tr
        class="MuiTableRow-root WithStyles(ForwardRef(TableRow))-root-357 makeStyles-clickableRow-355"
        data-testid="worker-client-list-row"
      >
        <td
          class="MuiTableCell-root MuiTableCell-body makeStyles-cellAvatar-270"
        >
          <div
            class="makeStyles-userCenter-235"
          >
            <span
              class="MuiBadge-root makeStyles-avatarPosition-237 makeStyles-avatarWithSmallBadge-320"
            >
              <div
                class="MuiAvatar-root MuiAvatar-circle makeStyles-avatarWrapper-318 makeStyles-avatarMedium-321 MuiAvatar-colorDefault"
              >
                <svg
                  class="MuiSvgIcon-root"
                  focusable="false"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
                  />
                  <title>
                    Active
                  </title>
                </svg>
              </div>
              <span
                class="MuiBadge-badge MuiBadge-anchorOriginBottomRightCircle"
              >
                <svg>
                  accepted.svg
                </svg>
              </span>
            </span>
            <a
              class="Link-root-358"
              data-testid="worker-row-btn"
              href="/workers/detail/11029ead-e3eb-48d5-a658-cd818a70719f"
              title="View Worker detail"
            >
              John Doe
            </a>
          </div>
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          Dallas
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          Ceiling, Plumbing
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        />
      </tr>
    </tbody>
  </table>
  <nav
    aria-label="pagination navigation"
    class="MuiPagination-root  makeStyles-pagination-359"
    data-testid="pagination"
  >
    <ul
      class="MuiPagination-ul"
    >
      <li>
        <button
          aria-label="Go to previous page"
          class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Mui-disabled Mui-disabled"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiPaginationItem-icon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
            />
          </svg>
        </button>
      </li>
      <li>
        <button
          aria-label="Go to next page"
          class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiPaginationItem-icon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
            />
          </svg>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </li>
    </ul>
  </nav>
  <div
    class="MuiDrawer-root MuiDrawer-docked makeStyles-drawer-360 makeStyles-close-371 closed"
    data-testid="worker-drawer-detail"
  >
    <div
      class="MuiPaper-root MuiDrawer-paper makeStyles-drawerPaper-361 MuiDrawer-paperAnchorRight MuiDrawer-paperAnchorDockedRight MuiPaper-elevation0"
      style="visibility: hidden; webkit-transform: translateX(1024px) translateX(0px); transform: translateX(1024px) translateX(0px);"
    >
      <div
        class="makeStyles-drawerButtonWrapper-363"
      >
        <div
          class="makeStyles-drawerButton-364"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text"
            data-testid="drawer-close-btn"
            style="outline: none;"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              <svg>
                close.svg
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
        <div
          class="makeStyles-drawerHeader-362"
        >
          <p
            class="MuiTypography-root makeStyles-drawerTitle-365 MuiTypography-body1 MuiTypography-colorPrimary MuiTypography-alignLeft"
          >
            Worker Information
          </p>
        </div>
      </div>
      <div
        class="makeStyles-listDetail-347"
      >
        <div
          class="makeStyles-company-348"
        >
          <div
            class="makeStyles-drawerText-367"
          >
            <p
              class="MuiTypography-root makeStyles-listAccent-349 makeStyles-entityTitle-346 MuiTypography-body1"
            >
               
            </p>
            <div
              class="makeStyles-drawerMainText-368"
            >
              <span>
                -
              </span>
            </div>
          </div>
          <div
            class="makeStyles-drawerSection-366"
          >
            <div
              class="makeStyles-drawerColumnDirection-375"
            >
              <div
                class="makeStyles-drawerRowDirection-376"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"
                  />
                </svg>
                <div
                  class="makeStyles-drawerText-367 makeStyles-drawerTextSeparation-369"
                >
                  <p
                    class="MuiTypography-root makeStyles-cardFont-379  MuiTypography-body1"
                  >
                    
                    <span
                      class=" "
                    >
                      -
                    </span>
                  </p>
                  <p
                    class="MuiTypography-root makeStyles-cardFont-379  MuiTypography-body1"
                  >
                    
                    
                    
                    
                  </p>
                  <p
                    class="MuiTypography-root makeStyles-cardFont-379  MuiTypography-body1"
                  >
                    -
                  </p>
                </div>
              </div>
            </div>
          </div>
          <div
            class="makeStyles-drawerSection-366"
          >
            <div
              class="makeStyles-drawerColumnDirection-375"
            >
              <div
                class="makeStyles-drawerRowDirection-376"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M6.62 10.79c1.44 2.83 3.76 5.14 6.59 6.59l2.2-2.2c.27-.27.67-.36 1.02-.24 1.12.37 2.33.57 3.57.57.55 0 1 .45 1 1V20c0 .55-.45 1-1 1-9.39 0-17-7.61-17-17 0-.55.45-1 1-1h3.5c.55 0 1 .45 1 1 0 1.25.2 2.45.57 3.57.11.35.03.74-.25 1.02l-2.2 2.2z"
                  />
                </svg>
                <div
                  class="makeStyles-drawerText-367 makeStyles-drawerTextSeparation-369"
                />
              </div>
            </div>
          </div>
          <div
            class="makeStyles-drawerSection-366"
          >
            <div
              class="makeStyles-drawerColumnDirection-375"
            >
              <div
                class="makeStyles-drawerRowDirection-376"
              >
                <svg
                  class="MuiSvgIcon-root"
                >
                  emergency-contact.svg
                </svg>
                <div
                  class="makeStyles-drawerText-367 makeStyles-drawerTextSeparation-369"
                />
              </div>
            </div>
          </div>
        </div>
        <hr
          class="MuiDivider-root makeStyles-drawerDivider-370"
        />
        <div
          class="makeStyles-ctaWrapper-350"
        >
          <span
            class=""
            data-testid="controlled-button"
            tabindex="-1"
          >
            <a
              aria-disabled="false"
              class="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-drawerCTA-292 makeStyles-borderPrimaryButton-284 makeStyles-primaryButtonPadding-286"
              data-testid="drawerButton"
              href="/workers/detail/null"
              tabindex="0"
            >
              <span
                class="MuiButton-label"
              >
                Worker Detail
              </span>
            </a>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`WorkersTab should render empty 1`] = `
<div>
  <div
    class="makeStyles-filterActionsContainer-22"
  >
    <div
      class="makeStyles-filterActionsContainer-22"
    >
      <div
        class="MuiBox-root MuiBox-root-77 makeStyles-filterStatusContainer-25 makeStyles-autocompleteFilterStatus-42 makeStyles-firstFilter-9"
      >
        <div
          class="makeStyles-floatingFilterWrapper-31 makeStyles-filterWrapper-30 makeStyles-buttonContainer-79 floatingFilterWrapper"
        >
          <span
            class="makeStyles-floatingFilterButton-32"
            data-testid="controlled-button"
            tabindex="-1"
          >
            <button
              aria-controls="false"
              aria-haspopup="true"
              class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-buttonFilter-40"
              data-testid="button-filter-open"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                All Locations
                <span
                  class="MuiButton-endIcon MuiButton-iconSizeMedium"
                >
                  <svg
                    class="makeStyles-dropdownIcon-34"
                  >
                    expand.svg
                  </svg>
                </span>
              </span>
            </button>
          </span>
        </div>
      </div>
      <div
        class="MuiBox-root MuiBox-root-83 makeStyles-filterStatusContainer-25 makeStyles-autocompleteFilterStatus-42"
      >
        <div
          class="makeStyles-floatingFilterWrapper-31 makeStyles-filterWrapper-30 makeStyles-buttonContainer-79 floatingFilterWrapper"
        >
          <span
            class="makeStyles-floatingFilterButton-32"
            data-testid="controlled-button"
            tabindex="-1"
          >
            <button
              aria-controls="false"
              aria-haspopup="true"
              class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-buttonFilter-40"
              data-testid="button-filter-open"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                All Projects Assigned
                <span
                  class="MuiButton-endIcon MuiButton-iconSizeMedium"
                >
                  <svg
                    class="makeStyles-dropdownIcon-34"
                  >
                    expand.svg
                  </svg>
                </span>
              </span>
            </button>
          </span>
        </div>
      </div>
    </div>
    <a
      href="/workers/wizard/new"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-createButton-52 makeStyles-primaryButtonLarge-54 MuiButton-containedPrimary MuiButton-containedSizeLarge MuiButton-sizeLarge MuiButton-fullWidth"
        tabindex="0"
        type="submit"
      >
        <span
          class="MuiButton-label"
        >
          Create Worker
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </a>
  </div>
  <div
    class=" makeStyles-container-85"
  >
    <div>
      <div
        class="MuiAvatar-root MuiAvatar-circle makeStyles-missingAvatarWrapper-96 makeStyles-missingAvatarBig-97 MuiAvatar-colorDefault"
      >
        <svg>
          workers.svg
        </svg>
      </div>
    </div>
    <p
      class="MuiTypography-root makeStyles-missingListText-86 MuiTypography-body1"
    >
      There are no Workers assigned
    </p>
  </div>
  <div
    class="MuiDrawer-root MuiDrawer-docked makeStyles-drawer-104 makeStyles-close-115 closed"
    data-testid="worker-drawer-detail"
  >
    <div
      class="MuiPaper-root MuiDrawer-paper makeStyles-drawerPaper-105 MuiDrawer-paperAnchorRight MuiDrawer-paperAnchorDockedRight MuiPaper-elevation0"
      style="visibility: hidden; webkit-transform: translateX(1024px) translateX(0px); transform: translateX(1024px) translateX(0px);"
    >
      <div
        class="makeStyles-drawerButtonWrapper-107"
      >
        <div
          class="makeStyles-drawerButton-108"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text"
            data-testid="drawer-close-btn"
            style="outline: none;"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              <svg>
                close.svg
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
        <div
          class="makeStyles-drawerHeader-106"
        >
          <p
            class="MuiTypography-root makeStyles-drawerTitle-109 MuiTypography-body1 MuiTypography-colorPrimary MuiTypography-alignLeft"
          >
            Worker Information
          </p>
        </div>
      </div>
      <div
        class="makeStyles-listDetail-134"
      >
        <div
          class="makeStyles-company-135"
        >
          <div
            class="makeStyles-drawerText-111"
          >
            <p
              class="MuiTypography-root makeStyles-listAccent-136 makeStyles-entityTitle-133 MuiTypography-body1"
            >
               
            </p>
            <div
              class="makeStyles-drawerMainText-112"
            >
              <span>
                -
              </span>
            </div>
          </div>
          <div
            class="makeStyles-drawerSection-110"
          >
            <div
              class="makeStyles-drawerColumnDirection-119"
            >
              <div
                class="makeStyles-drawerRowDirection-120"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"
                  />
                </svg>
                <div
                  class="makeStyles-drawerText-111 makeStyles-drawerTextSeparation-113"
                >
                  <p
                    class="MuiTypography-root makeStyles-cardFont-146  MuiTypography-body1"
                  >
                    
                    <span
                      class=" "
                    >
                      -
                    </span>
                  </p>
                  <p
                    class="MuiTypography-root makeStyles-cardFont-146  MuiTypography-body1"
                  >
                    
                    
                    
                    
                  </p>
                  <p
                    class="MuiTypography-root makeStyles-cardFont-146  MuiTypography-body1"
                  >
                    -
                  </p>
                </div>
              </div>
            </div>
          </div>
          <div
            class="makeStyles-drawerSection-110"
          >
            <div
              class="makeStyles-drawerColumnDirection-119"
            >
              <div
                class="makeStyles-drawerRowDirection-120"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M6.62 10.79c1.44 2.83 3.76 5.14 6.59 6.59l2.2-2.2c.27-.27.67-.36 1.02-.24 1.12.37 2.33.57 3.57.57.55 0 1 .45 1 1V20c0 .55-.45 1-1 1-9.39 0-17-7.61-17-17 0-.55.45-1 1-1h3.5c.55 0 1 .45 1 1 0 1.25.2 2.45.57 3.57.11.35.03.74-.25 1.02l-2.2 2.2z"
                  />
                </svg>
                <div
                  class="makeStyles-drawerText-111 makeStyles-drawerTextSeparation-113"
                />
              </div>
            </div>
          </div>
          <div
            class="makeStyles-drawerSection-110"
          >
            <div
              class="makeStyles-drawerColumnDirection-119"
            >
              <div
                class="makeStyles-drawerRowDirection-120"
              >
                <svg
                  class="MuiSvgIcon-root"
                >
                  emergency-contact.svg
                </svg>
                <div
                  class="makeStyles-drawerText-111 makeStyles-drawerTextSeparation-113"
                />
              </div>
            </div>
          </div>
        </div>
        <hr
          class="MuiDivider-root makeStyles-drawerDivider-114"
        />
        <div
          class="makeStyles-ctaWrapper-137"
        >
          <span
            class=""
            data-testid="controlled-button"
            tabindex="-1"
          >
            <a
              aria-disabled="false"
              class="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-drawerCTA-59 makeStyles-borderPrimaryButton-51 makeStyles-primaryButtonPadding-53"
              data-testid="drawerButton"
              href="/workers/detail/null"
              tabindex="0"
            >
              <span
                class="MuiButton-label"
              >
                Worker Detail
              </span>
            </a>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`WorkersTab should render loading 1`] = `
<div>
  Loading...
</div>
`;

exports[`WorkersTab should show selectedProjectFilter 1`] = `
<div>
  <div
    class="makeStyles-filterActionsContainer-726"
  >
    <div
      class="makeStyles-filterActionsContainer-726"
    >
      <div
        class="MuiBox-root MuiBox-root-781 makeStyles-filterStatusContainer-729 makeStyles-autocompleteFilterStatus-746 makeStyles-firstFilter-713"
      >
        <div
          class="makeStyles-floatingFilterWrapper-735 makeStyles-filterWrapper-734 makeStyles-buttonContainer-783 floatingFilterWrapper"
        >
          <span
            class="makeStyles-floatingFilterButton-736"
            data-testid="controlled-button"
            tabindex="-1"
          >
            <button
              aria-controls="false"
              aria-haspopup="true"
              class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-buttonFilter-744"
              data-testid="button-filter-open"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                All Locations
                <span
                  class="MuiButton-endIcon MuiButton-iconSizeMedium"
                >
                  <svg
                    class="makeStyles-dropdownIcon-738"
                  >
                    expand.svg
                  </svg>
                </span>
              </span>
            </button>
          </span>
        </div>
      </div>
      <div
        class="MuiBox-root MuiBox-root-787 makeStyles-filterStatusContainer-729 makeStyles-autocompleteFilterStatus-746"
      >
        <div
          class="makeStyles-floatingFilterWrapper-735 makeStyles-filterWrapper-734 makeStyles-buttonContainer-783 floatingFilterWrapper"
        >
          <span
            class="makeStyles-floatingFilterButton-736"
            data-testid="controlled-button"
            tabindex="-1"
          >
            <button
              aria-controls="false"
              aria-haspopup="true"
              class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-buttonFilter-744"
              data-testid="button-filter-open"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                Named Entity
                <span
                  class="MuiButton-endIcon MuiButton-iconSizeMedium"
                >
                  <svg
                    class="makeStyles-dropdownIcon-738"
                  >
                    expand.svg
                  </svg>
                </span>
              </span>
            </button>
          </span>
        </div>
      </div>
    </div>
    <a
      href="/workers/wizard/new"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-createButton-756 makeStyles-primaryButtonLarge-758 MuiButton-containedPrimary MuiButton-containedSizeLarge MuiButton-sizeLarge MuiButton-fullWidth"
        tabindex="0"
        type="submit"
      >
        <span
          class="MuiButton-label"
        >
          Create Worker
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </a>
  </div>
  <table
    aria-label="worker-list"
    class="MuiTable-root"
  >
    <thead
      class="MuiTableHead-root"
    >
      <tr
        class="MuiTableRow-root MuiTableRow-head"
      >
        <th
          class="MuiTableCell-root MuiTableCell-head"
          scope="col"
        >
          Name
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head"
          scope="col"
        >
          Location
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head"
          scope="col"
        >
          Trades
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head"
          scope="col"
        >
          Projects Assigned
        </th>
      </tr>
    </thead>
    <tbody
      class="MuiTableBody-root"
    >
      <tr
        class="MuiTableRow-root WithStyles(ForwardRef(TableRow))-root-828 makeStyles-clickableRow-826"
        data-testid="worker-client-list-row"
      >
        <td
          class="MuiTableCell-root MuiTableCell-body makeStyles-cellAvatar-741"
        >
          <div
            class="makeStyles-userCenter-706"
          >
            <span
              class="MuiBadge-root makeStyles-avatarPosition-708 makeStyles-avatarWithSmallBadge-791"
            >
              <div
                class="MuiAvatar-root MuiAvatar-circle makeStyles-avatarWrapper-789 makeStyles-avatarMedium-792 MuiAvatar-colorDefault"
              >
                <svg
                  class="MuiSvgIcon-root"
                  focusable="false"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
                  />
                  <title>
                    Active
                  </title>
                </svg>
              </div>
              <span
                class="MuiBadge-badge MuiBadge-anchorOriginBottomRightCircle"
              >
                <svg>
                  accepted.svg
                </svg>
              </span>
            </span>
            <a
              class="Link-root-829"
              data-testid="worker-row-btn"
              href="/workers/detail/2"
              title="View Worker detail"
            >
              John Doe
            </a>
          </div>
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          Dallas
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          Ceiling, Plumbing
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          1
        </td>
      </tr>
      <tr
        class="MuiTableRow-root WithStyles(ForwardRef(TableRow))-root-828 makeStyles-clickableRow-826"
        data-testid="worker-client-list-row"
      >
        <td
          class="MuiTableCell-root MuiTableCell-body makeStyles-cellAvatar-741"
        >
          <div
            class="makeStyles-userCenter-706"
          >
            <span
              class="MuiBadge-root makeStyles-avatarPosition-708 makeStyles-avatarWithSmallBadge-791"
            >
              <div
                class="MuiAvatar-root MuiAvatar-circle makeStyles-avatarWrapper-789 makeStyles-avatarMedium-792 MuiAvatar-colorDefault"
              >
                <svg
                  class="MuiSvgIcon-root"
                  focusable="false"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
                  />
                  <title>
                    Active
                  </title>
                </svg>
              </div>
              <span
                class="MuiBadge-badge MuiBadge-anchorOriginBottomRightCircle"
              >
                <svg>
                  accepted.svg
                </svg>
              </span>
            </span>
            <a
              class="Link-root-829"
              data-testid="worker-row-btn"
              href="/workers/detail/11029ead-e3eb-48d5-a658-cd818a70719f"
              title="View Worker detail"
            >
              John Doe
            </a>
          </div>
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          Dallas
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          Ceiling, Plumbing
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        />
      </tr>
    </tbody>
  </table>
  <nav
    aria-label="pagination navigation"
    class="MuiPagination-root  makeStyles-pagination-830"
    data-testid="pagination"
  >
    <ul
      class="MuiPagination-ul"
    >
      <li>
        <button
          aria-label="Go to previous page"
          class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Mui-disabled Mui-disabled"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiPaginationItem-icon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
            />
          </svg>
        </button>
      </li>
      <li>
        <button
          aria-label="Go to next page"
          class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiPaginationItem-icon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
            />
          </svg>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </li>
    </ul>
  </nav>
  <div
    class="MuiDrawer-root MuiDrawer-docked makeStyles-drawer-831 makeStyles-close-842 closed"
    data-testid="worker-drawer-detail"
  >
    <div
      class="MuiPaper-root MuiDrawer-paper makeStyles-drawerPaper-832 MuiDrawer-paperAnchorRight MuiDrawer-paperAnchorDockedRight MuiPaper-elevation0"
      style="visibility: hidden; webkit-transform: translateX(1024px) translateX(0px); transform: translateX(1024px) translateX(0px);"
    >
      <div
        class="makeStyles-drawerButtonWrapper-834"
      >
        <div
          class="makeStyles-drawerButton-835"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text"
            data-testid="drawer-close-btn"
            style="outline: none;"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              <svg>
                close.svg
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
        <div
          class="makeStyles-drawerHeader-833"
        >
          <p
            class="MuiTypography-root makeStyles-drawerTitle-836 MuiTypography-body1 MuiTypography-colorPrimary MuiTypography-alignLeft"
          >
            Worker Information
          </p>
        </div>
      </div>
      <div
        class="makeStyles-listDetail-818"
      >
        <div
          class="makeStyles-company-819"
        >
          <div
            class="makeStyles-drawerText-838"
          >
            <p
              class="MuiTypography-root makeStyles-listAccent-820 makeStyles-entityTitle-817 MuiTypography-body1"
            >
               
            </p>
            <div
              class="makeStyles-drawerMainText-839"
            >
              <span>
                -
              </span>
            </div>
          </div>
          <div
            class="makeStyles-drawerSection-837"
          >
            <div
              class="makeStyles-drawerColumnDirection-846"
            >
              <div
                class="makeStyles-drawerRowDirection-847"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"
                  />
                </svg>
                <div
                  class="makeStyles-drawerText-838 makeStyles-drawerTextSeparation-840"
                >
                  <p
                    class="MuiTypography-root makeStyles-cardFont-850  MuiTypography-body1"
                  >
                    
                    <span
                      class=" "
                    >
                      -
                    </span>
                  </p>
                  <p
                    class="MuiTypography-root makeStyles-cardFont-850  MuiTypography-body1"
                  >
                    
                    
                    
                    
                  </p>
                  <p
                    class="MuiTypography-root makeStyles-cardFont-850  MuiTypography-body1"
                  >
                    -
                  </p>
                </div>
              </div>
            </div>
          </div>
          <div
            class="makeStyles-drawerSection-837"
          >
            <div
              class="makeStyles-drawerColumnDirection-846"
            >
              <div
                class="makeStyles-drawerRowDirection-847"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M6.62 10.79c1.44 2.83 3.76 5.14 6.59 6.59l2.2-2.2c.27-.27.67-.36 1.02-.24 1.12.37 2.33.57 3.57.57.55 0 1 .45 1 1V20c0 .55-.45 1-1 1-9.39 0-17-7.61-17-17 0-.55.45-1 1-1h3.5c.55 0 1 .45 1 1 0 1.25.2 2.45.57 3.57.11.35.03.74-.25 1.02l-2.2 2.2z"
                  />
                </svg>
                <div
                  class="makeStyles-drawerText-838 makeStyles-drawerTextSeparation-840"
                />
              </div>
            </div>
          </div>
          <div
            class="makeStyles-drawerSection-837"
          >
            <div
              class="makeStyles-drawerColumnDirection-846"
            >
              <div
                class="makeStyles-drawerRowDirection-847"
              >
                <svg
                  class="MuiSvgIcon-root"
                >
                  emergency-contact.svg
                </svg>
                <div
                  class="makeStyles-drawerText-838 makeStyles-drawerTextSeparation-840"
                />
              </div>
            </div>
          </div>
        </div>
        <hr
          class="MuiDivider-root makeStyles-drawerDivider-841"
        />
        <div
          class="makeStyles-ctaWrapper-821"
        >
          <span
            class=""
            data-testid="controlled-button"
            tabindex="-1"
          >
            <a
              aria-disabled="false"
              class="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-drawerCTA-763 makeStyles-borderPrimaryButton-755 makeStyles-primaryButtonPadding-757"
              data-testid="drawerButton"
              href="/workers/detail/null"
              tabindex="0"
            >
              <span
                class="MuiButton-label"
              >
                Worker Detail
              </span>
            </a>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
